更新submit提交列表，用户详细信息等
